--- a/calico/reference/resources/networkpolicy.mdx
+++ b/calico/reference/resources/networkpolicy.mdx
@@ -85,7 +85,7 @@ spec:
 | ingress                | Ordered list of ingress rules applied by policy.                                                                                                                                                                                     |                           | List of [Rule](#rule)  |                                               |
 | egress                 | Ordered list of egress rules applied by this policy.                                                                                                                                                                                 |                           | List of [Rule](#rule)  |                                               |
 | serviceAccountSelector | Selects the service account(s) to which this policy applies. Select a specific service account by name using the `projectcalico.org/name` label.                                                                                     |                           | [selector](#selectors) | all()                                         |
-| performanceHints       | Contains a list of hints to Calico's policy engine to help process the policy more efficiently.  Hints never change the enforcement behaviour of the policy.                                                                         | `AssumeNeededOnEveryNode` | List of strings        |                                               |
+| performanceHints       | Contains a list of hints to Calico's policy engine to help process the policy more efficiently.  Hints never change the enforcement behaviour of the policy.  The available hints are described [below](#performance-hints).                                                                         | `AssumeNeededOnEveryNode` | List of strings        |                                               |
 
 
 \* If `types` has no value, {{prodname}} defaults as follows.
