--- a/calico-enterprise/reference/resources/globalnetworkpolicy.mdx
+++ b/calico-enterprise/reference/resources/globalnetworkpolicy.mdx
@@ -97,7 +97,7 @@ spec:
 | doNotTrack\*\*         | Indicates to apply the rules in this policy before any data plane connection tracking, and that packets allowed by these rules should not be tracked.                                                                                | true, false               | boolean               | false                                         |
 | preDNAT\*\*            | Indicates to apply the rules in this policy before any DNAT.                                                                                                                                                                         | true, false               | boolean               | false                                         |
 | applyOnForward\*\*     | Indicates to apply the rules in this policy on forwarded traffic as well as to locally terminated traffic.                                                                                                                           | true, false               | boolean               | false                                         |
-| performanceHints       | Contains a list of hints to Calico's policy engine to help process the policy more efficiently.  Hints never change the enforcement behaviour of the policy.                                                                         | `AssumeNeededOnEveryNode` | List of strings       |                                               |
+| performanceHints       | Contains a list of hints to Calico's policy engine to help process the policy more efficiently.  Hints never change the enforcement behaviour of the policy.  The available hints are described [below](#performance-hints).                                                                         | `AssumeNeededOnEveryNode` | List of strings       |                                               |
 
 \* If `types` has no value, {{prodname}} defaults as follows.
 
