--- a/calico-enterprise/reference/resources/globalnetworkpolicy.mdx
+++ b/calico-enterprise/reference/resources/globalnetworkpolicy.mdx
@@ -84,19 +84,20 @@ spec:
 
 ### Spec
 
-| Field                  | Description                                                                                                                                                                                                                          | Accepted Values     | Schema                | Default                                       |
-| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------- | --------------------- | --------------------------------------------- |
-| order                  | Controls the order of precedence. {{prodname}} applies the policy with the lowest value first.                                                                                                                                       |                     | float                 |                                               |
-| tier                   | Name of the [tier](tier.mdx) this policy belongs to.                                                                                                                                                                                 |                     | string                | `default`                                     |
-| selector               | Selects the endpoints to which this policy applies.                                                                                                                                                                                  |                     | [selector](#selector) | all()                                         |
-| serviceAccountSelector | Selects the service account(s) to which this policy applies. Select all service accounts in the cluster with a specific name using the `projectcalico.org/name` label.                                                               |                     | [selector](#selector) | all()                                         |
-| namespaceSelector      | Selects the namespace(s) to which this policy applies. Select a specific namespace by name using the `projectcalico.org/name` label.                                                                                                 |                     | [selector](#selector) | all()                                         |
-| types                  | Applies the policy based on the direction of the traffic. To apply the policy to inbound traffic, set to `Ingress`. To apply the policy to outbound traffic, set to `Egress`. To apply the policy to both, set to `Ingress, Egress`. | `Ingress`, `Egress` | List of strings       | Depends on presence of ingress/egress rules\* |
-| ingress                | Ordered list of ingress rules applied by policy.                                                                                                                                                                                     |                     | List of [Rule](#rule) |                                               |
-| egress                 | Ordered list of egress rules applied by this policy.                                                                                                                                                                                 |                     | List of [Rule](#rule) |                                               |
-| doNotTrack\*\*         | Indicates to apply the rules in this policy before any data plane connection tracking, and that packets allowed by these rules should not be tracked.                                                                                | true, false         | boolean               | false                                         |
-| preDNAT\*\*            | Indicates to apply the rules in this policy before any DNAT.                                                                                                                                                                         | true, false         | boolean               | false                                         |
-| applyOnForward\*\*     | Indicates to apply the rules in this policy on forwarded traffic as well as to locally terminated traffic.                                                                                                                           | true, false         | boolean               | false                                         |
+| Field                  | Description                                                                                                                                                                                                                          | Accepted Values           | Schema                | Default                                       |
+| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------- | --------------------- | --------------------------------------------- |
+| order                  | Controls the order of precedence. {{prodname}} applies the policy with the lowest value first.                                                                                                                                       |                           | float                 |                                               |
+| tier                   | Name of the [tier](tier.mdx) this policy belongs to.                                                                                                                                                                                 |                           | string                | `default`                                     |
+| selector               | Selects the endpoints to which this policy applies.                                                                                                                                                                                  |                           | [selector](#selector) | all()                                         |
+| serviceAccountSelector | Selects the service account(s) to which this policy applies. Select all service accounts in the cluster with a specific name using the `projectcalico.org/name` label.                                                               |                           | [selector](#selector) | all()                                         |
+| namespaceSelector      | Selects the namespace(s) to which this policy applies. Select a specific namespace by name using the `projectcalico.org/name` label.                                                                                                 |                           | [selector](#selector) | all()                                         |
+| types                  | Applies the policy based on the direction of the traffic. To apply the policy to inbound traffic, set to `Ingress`. To apply the policy to outbound traffic, set to `Egress`. To apply the policy to both, set to `Ingress, Egress`. | `Ingress`, `Egress`       | List of strings       | Depends on presence of ingress/egress rules\* |
+| ingress                | Ordered list of ingress rules applied by policy.                                                                                                                                                                                     |                           | List of [Rule](#rule) |                                               |
+| egress                 | Ordered list of egress rules applied by this policy.                                                                                                                                                                                 |                           | List of [Rule](#rule) |                                               |
+| doNotTrack\*\*         | Indicates to apply the rules in this policy before any data plane connection tracking, and that packets allowed by these rules should not be tracked.                                                                                | true, false               | boolean               | false                                         |
+| preDNAT\*\*            | Indicates to apply the rules in this policy before any DNAT.                                                                                                                                                                         | true, false               | boolean               | false                                         |
+| applyOnForward\*\*     | Indicates to apply the rules in this policy on forwarded traffic as well as to locally terminated traffic.                                                                                                                           | true, false               | boolean               | false                                         |
+| performanceHints       | Contains a list of hints to Calico's policy engine to help process the policy more efficiently.  Hints never change the enforcement behaviour of the policy.  The available hints are described [below](#performance-hints).                                                                         | `AssumeNeededOnEveryNode` | List of strings       |                                               |
 
 \* If `types` has no value, {{prodname}} defaults as follows.
 
@@ -149,6 +150,18 @@ for how `doNotTrack` and `preDNAT` and `applyOnForward` can be useful for host e
 ### ServiceMatch
 
 <Servicematch />
+
+### Performance Hints
+
+Performance hints provide a way to tell {{prodname}} about the intended use of the policy so that it may
+process it more efficiently.  Currently only one hint is defined:
+
+* `AssumeNeededOnEveryNode`: normally, {{prodname}} only calculates a policy's rules and selectors on nodes where
+  the policy is actually in use (i.e. its selector matches a local endpoint).  This saves work in most cases.
+  The `AssumeNeededOnEveryNode` hint tells {{prodname}} to treat the policy as "in use" on *every* node.  This is
+  useful for large policy sets that are known to apply to all (or nearly all) endpoints.  It effectively "preloads"
+  the policy on every node so that there is less work to do when the first endpoint matching the policy shows up.
+  It also prevents work from being done to tear down the policy when the last endpoint is drained.
 
 ## Application layer policy
 
