Testing curated content

--- a/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
@@ -6,6 +6,9 @@ redirect_from:
 
 # Configure egress gateways, on-premises
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 ## Big picture
 
 Configure specific application traffic to exit the cluster through an egress gateway.
@@ -53,15 +56,15 @@ particular application to leave the cluster through a particular node or nodes. 
 gateways just need to be scheduled to the desired nodes, and the application pods/namespaces
 configured to use those gateways.
 
-## Features
+### Learn about egress gateways
 
-This how-to guide uses the following features:
+  <Tabs>
+  <TabItem label="Solutions, use cases, demos" value="links-1">
 
-Kubernetes **Namespace** and **Pod** resources with these {{prodname}} annotations:
+  [Using Calico Egress gateway and access controls to secure traffic](https://www.tigera.io/blog/using-calico-egress-gateway-and-access-controls-to-secure-traffic/)
 
-- egress.projectcalico.org/egressGatewayPolicy
-- egress.projectcalico.org/namespaceSelector
-- egress.projectcalico.org/selector
+</TabItem>
+  </Tabs>
 
 ## Concepts
 
