--- a/calico-enterprise/visibility/elastic/overview.mdx
+++ b/calico-enterprise/visibility/elastic/overview.mdx
@@ -21,6 +21,16 @@ Workloads and policies are highly dynamic. To troubleshoot Kubernetes clusters, 
 - Configure data retention settings to manage cluster disk space
 - Integration with third-party tools like Amazon S3, Syslog, Splunk
 
+### Learn about observability and troubleshooting
+
+| Format         | Description                                                  | Link                                                         |
+| -------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| Technical blog | Flow log data types and how they provide visibility.         | [Leveraging Calico flow logs for enhanced observability](https://www.tigera.io/blog/leveraging-calico-flow-logs-for-enhanced-observability/) |
+|                | Walkthrough of {{prodname}} DNS observability tools (DNS logs, Service Graph, and DNS dashboard. | [DNS observability and troubleshooting for Kubernetes and containers with Calico](https://www.tigera.io/blog/dns-observability-and-troubleshooting-for-kubernetes-and-containers-with-calico/) |
+| Training       | Learn, and practice, troubleshooting techniques with a hands-on labs and fix it yourself scenarios. | [Observability and troubleshooting clinic](https://www.tigera.io/customer-success/observability-and-troubleshooting/) |
+|                |                                                              | [Security and Observability for Containers and Kubernetes with Calico](https://www.tigera.io/customer-success/advanced-training-security-and-observability/) |
+|                | Hands-on Workshop                                            | [Hands-on workshop: Implementing observability to secure containers and Kubernetes for EKS](https://www.tigera.io/event/hands-on-workshop-implementing-observability-to-secure-containers-and-kubernetes-for-eks/) |
+
 ## Concepts
 
 ### Logs types
