Calico docs changes
* Adds support for Azure CNI with overlay networking

--- a/calico/getting-started/kubernetes/managed-public-cloud/aks.mdx
+++ b/calico/getting-started/kubernetes/managed-public-cloud/aks.mdx
@@ -25,6 +25,15 @@ The geeky details of what you get:
   details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:No,Routing:VPC Native,Datastore:Kubernetes'
 />
 
+Alternatively you can run in Azure CNI overlay mode.
+
+The geeky details of what you get:
+
+<GeekDetails
+  prodname='{{prodname}}'
+  details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:Yes,Routing:VPC Native,Datastore:Kubernetes'
+/>
+
 To enable {{prodname}} network policy enforcement, follow these step-by-step instructions: [Create an AKS cluster and enable network policy](https://docs.microsoft.com/en-us/azure/aks/use-network-policies).
 
 ### Install AKS with {{prodname}} networking
