--- a/calico/networking/determine-best-networking.mdx
+++ b/calico/networking/determine-best-networking.mdx
@@ -211,6 +211,13 @@ If you would like pod IP addresses to be routable outside of the cluster then yo
   details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:No,Routing:VPC Native'
 />
 
+Alternatively you can run {{prodname}} in Azure CNI overlay mode.
+
+<GeekDetails
+  prodname='{{prodname}}'
+  details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:Yes,Routing:VPC Native'
+/>
+
 If you want to use AKS but allocating pod IPs from the underlying VNET is problematic due to IP address range exhaustion challenges, you can use {{prodname}} in conjunction with the Azure cloud provider integration. This uses host-local IPAM to allocate /24 per node, and programs routes within the cluster’s underlying VNET subnet for those /24. Pod IPs are not routable outside of the cluster / VNET subnet, so the same pod IP address range (CIDR) can be used across multiple clusters if desired.
 
 :::note
