Calico Enterprise docs changes
* Adds support for Azure CNI with overlay networking

--- a/calico-enterprise/getting-started/install-on-clusters/aks.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/aks.mdx
@@ -32,12 +32,23 @@ Install {{prodname}} on an AKS managed Kubernetes cluster.
     details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:No,Routing:VPC Native,Datastore:Kubernetes'
   />
 
+- Azure CNI with overlay networking with {{prodname}} network policy
+
+  The geeky details of what you get:
+
+
+  <GeekDetails
+    prodname='{{prodname}}'
+    details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:Yes,Routing:VPC Native,Datastore:Kubernetes'
+  />
+
 **Required**
 
 - A [compatible AKS cluster](../compatibility.mdx#aks)
 
   - To use the Calico CNI, you must configure the AKS cluster with [Bring your own CNI](https://docs.microsoft.com/en-us/azure/aks/use-byo-cni?tabs=azure-cli)
   - To use the Azure CNI, see [Azure CNI networking](https://docs.microsoft.com/en-us/azure/aks/configure-azure-cni)
+  - To use the Azure CNI with overlay networking, see [Azure CNI with Overlay](https://learn.microsoft.com/en-us/azure/aks/azure-cni-overlay)
 
 - Cluster is not using a Kubernetes reconciler
 
