--- a/calico-enterprise_versioned_docs/version-3.18/networking/determine-best-networking.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/networking/determine-best-networking.mdx
@@ -201,6 +201,13 @@ If you would like pod IP addresses to be routable outside of the cluster then yo
   details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:No,Routing:VPC Native'
 />
 
+Alternatively you can run {{prodname}} in Azure CNI overlay mode.
+
+<GeekDetails
+  prodname='{{prodname}}'
+  details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:Yes,Routing:VPC Native'
+/>
+
 If you are using AKS and prefer to avoid dependencies on a specific cloud provider or allocating pod IPs from the underlying VNET is problematic due to IP address range exhaustion challenges, we recommend using {{prodname}} networking in cross-subnet overlay mode. Pod IPs will not be routable outside of the cluster, but you can scale the cluster up to the limits of Kubernetes with no dependencies on the underlying cloud network.
 
 <GeekDetails
