--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -8,11 +8,7 @@ Intro text.
 
 ## New features and enhancements
 
-### VXLAN encapsulation for cross-cluster connectivity
-
-Added support for VXLAN overlay networking to federated endpoint indentity and services. Using VXLAN overlay networking alleviates the work of configuring routable pod CIDRs for cross-cluster connectivity, and provides a solution if IPs are exhausted. {{prodname}} uses the VXLAN overlay network to establish pod CIDR routes to remote nodes.
-
-For more information, see [Configure federated endpoint identity and services](../multicluster/federation/kubeconfig).
+### Feature one
 
 ### Helm installation and upgrade for multi-cluster management deployments
 
