--- a/calico-enterprise_versioned_docs/version-3.18/_includes/release-notes/_v3.18.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/_includes/release-notes/_v3.18.0-release-notes.mdx
@@ -2,19 +2,28 @@
 
 ### What's new {#whats-new-3.18.0}
 
+#### Support for AKS clusters with Azure CNI with overlay networking
+
+We've add supported for Azure CNI with overlay networking for AKS clusters. This option augments the support for Azure CNI where a VNET IP address is assigned to every pod, which can lead to IP address exhaustion. To review Azure CNI options, see [Microsoft Azure Kubernetes Service (AKS)](../getting-started/install-on-clusters/aks).
+
 #### Security event management
+
 This release introduces a new way of reporting events for threat detection in {{prodname}}. Security Events provides useful context on suspicious activity detected in your cluster alongside all of the Kubernetes context, so you can see what workloads are affected. [Security event management](../threat/security-event-management).
 
 #### New performance optimizations for Egress Gateways
+
 {{prodname}} includes new performance options for Egress Gateway Policies that can be used to ensure that application client and gateway pods are on the same cluster node. [Optimize egress networking for workloads with long-lived TCP connections](../networking/egress/egress-gateway-maintenance).
 
 #### Configurable XFF headers for Envoy
+
 {{prodname}} now supports XFF to propagate the original IP address when proxying application layer traffic with Envoy within a Kubernetes cluster. [Installation reference](../reference/installation/api#operator.tigera.io/v1.EnvoySettings).
 
 #### Alert-only mode for Workload-based Web Application Firewall (WAF)
+
 {{prodname}} now provides a new default mode for WAF that is monitor/event only, enabling operators and security teams to get visibility into the accuracy of rules configured before actively blocking traffic. [Web application firewall](../threat/web-application-firewall).
 
 #### Additional options for Helm-based installs
+
 {{prodname}} includes additional options for Helm installs including the ability to set the number of replicas for certain deployments, node affinity rules, and configuring Wireguard. [Helm installation reference](../reference/installation/helm_customization).
 
 ### Known issues {#known-issues-3.18.0}
