--- a/calico/_includes/release-notes/_master-release-notes.mdx
+++ b/calico/_includes/release-notes/_master-release-notes.mdx
@@ -7,7 +7,9 @@ releases are displayed.
 -->
 ### What's new {#whats-new-v0.1.0}
 
-#### New feature 1
+#### Support for Azure CNI with overlay networking
+
+We've added supports for Azure CNI with overlay networking. This options augments support for traditional Azure CNI where a VNET IP address is assigned to every pod, which can lead to IP address exhaustion. To review both options, see [Microsoft Azure Kubernetes Service (AKS)](../getting-started/kubernetes/managed-public-cloud/aks).
 
 #### New feature 2
 
