DOCS-1799-ebpf-RN

--- a/calico/release-notes/index.mdx
+++ b/calico/release-notes/index.mdx
@@ -2,12 +2,18 @@
 description: What's new, and why features provide value for upgrading.
 ---
 
-# Release notes
+# Calico X.Y release notes
 
-#### New features
+date
 
-### HPC-based Windows install and upgrade
+### New features
+
+#### HPC-based Windows install and upgrade
 
 We've added support for HPC (HostProcess/Privileged containers) install and upgrade for Windows nodes. {{prodname}} can now bootstrap Windows worker nodes just like Linux worker nodes. Platform engineers can scale Windows worker nodes with an auto-scaling node pool without bootstraping each node manually, and upgrade {{prodname}} deployments without manually upgrading nodes one at a time.
 
 For more information, see [Quickstart](../getting-started/kubernetes/windows-calico/quickstart#install-calico-for-windows-using-hostprocess-containers).
+
+#### ipV6 support for eBPF
+
+We've added support for ipV6 to eBPF, which has more advanced and has better features compared to IPv4. For eBPF details, see [Enable the eBPF dataplane](../operations/ebpf/enabling-ebpf.mdx).
