DOCS-1881: Adding support for RKE2 in CC

--- a/calico-cloud/get-started/connect/requirements/system-requirements.mdx
+++ b/calico-cloud/get-started/connect/requirements/system-requirements.mdx
@@ -59,3 +59,4 @@ If you using one of the following platforms, review further requirements. Otherw
 
 - [AKS](aks.mdx)
 - [GKE](gke.mdx)
+- [RKE2](rke2.mdx)
