--- a/calico-cloud_versioned_docs/version-3.17/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/networking/egress/egress-gateway-on-prem.mdx
@@ -324,6 +324,11 @@ The health port `8080` is used by:
   no policy is required to allow it. {{prodname}} only sends probes to egress gateway pods that have a named
   "health" port. This ensures that during an upgrade, health probes are only sent to upgraded egress gateways.
 
+### Deploying on a RKE2 CIS Hardened Cluster
+
+If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSecurityPolicies` restrict the `securityContext` and `volumes` required by egress gateway.
+When deploying using the egress gateway custom resource, the Tigera Operator sets up `PodSecurityPolicy`, `Role`, `RoleBinding` and associated `ServiceAccount`.
+
 
 ### Configure IP autodetection for dual-ToR clusters.
 
