DOCS-1804-Overlay-AKS-RN

--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -8,6 +8,10 @@ Intro text.
 
 ## New features and enhancements
 
+### Support for Azure CNI with overlay networking for AKS clusters
+
+We've added supported for Azure CNI with overlay networking for AKS clusters. This option augments support for Azure CNI where a VNET IP address is assigned to every pod, which can lead to IP address exhaustion. To review Azure CNI options, see [Microsoft Azure Kubernetes Service (AKS)](../getting-started/install-on-clusters/aks).
+
 ### VXLAN encapsulation for cross-cluster connectivity
 
 Added support for VXLAN overlay networking to federated endpoint indentity and services. Using VXLAN overlay networking alleviates the work of configuring routable pod CIDRs for cross-cluster connectivity, and provides a solution if IPs are exhausted. {{prodname}} uses the VXLAN overlay network to establish pod CIDR routes to remote nodes.
