--- a/calico-enterprise_versioned_docs/version-3.18/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/release-notes/index.mdx
@@ -2,6 +2,12 @@
 description: What's new, and why features provide value for upgrading.
 ---
 
-# Release notes
+# Calico Enterprise X.Y release notes
 
-<ReleaseNotes />
+Intro text.
+
+## New features and enhancements
+
+### Support for Azure CNI with overlay networking for AKS clusters
+
+We've added supported for Azure CNI with overlay networking for AKS clusters. This option augments support for Azure CNI where a VNET IP address is assigned to every pod, which can lead to IP address exhaustion. To review Azure CNI options, see [Microsoft Azure Kubernetes Service (AKS)](../getting-started/install-on-clusters/aks).
