--- a/calico/release-notes/index.mdx
+++ b/calico/release-notes/index.mdx
@@ -2,12 +2,29 @@
 description: What's new, and why features provide value for upgrading.
 ---
 
-# Release notes
+# Calico X.Y release notes
 
-#### New features
+Intro text.
+
+## New features and enhancements
 
 ### HPC-based Windows install and upgrade
 
 We've added support for HPC (HostProcess/Privileged containers) install and upgrade for Windows nodes. {{prodname}} can now bootstrap Windows worker nodes just like Linux worker nodes. Platform engineers can scale Windows worker nodes with an auto-scaling node pool without bootstraping each node manually, and upgrade {{prodname}} deployments without manually upgrading nodes one at a time.
 
 For more information, see [Quickstart](../getting-started/kubernetes/windows-calico/quickstart#install-calico-for-windows-using-hostprocess-containers).
+
+### ipV6 support for eBPF
+
+eBPF now supports ipv6, which offers advanced and better features comparied with ipv4. For eBPF details, see [Enable the eBPF dataplane](../operations/ebpf/enabling-ebpf.mdx).
+
+### Support for Azure CNI with overlay networking for AKS
+
+We've add supported for Azure CNI with overlay networking for AKS clusters. This option augments support for the Azure CNI with no overlay where a VNET IP address is assigned to every pod, which can lead to IP address exhaustion. To review Azure CNI options, see [Microsoft Azure Kubernetes Service (AKS)](../getting-started/kubernetes/managed-public-cloud/aks).
+
+## Bug fixes
+
+## Security fixes
+
+## Known issues
+
