Revert "Fix text"
This reverts commit 4edc7915c28671f2ee5bb123531a6909777942d2.

--- a/calico/release-notes/index.mdx
+++ b/calico/release-notes/index.mdx
@@ -4,10 +4,4 @@ description: What's new, and why features provide value for upgrading.
 
 # Release notes
 
-#### New features
-
-### HPC-based Windows install and upgrade
-
-We've added support for HPC (HostProcess/Privileged containers) install and upgrade for Windows nodes. {{prodname}} can now bootstrap Windows worker nodes just like Linux worker nodes. Platform engineers can scale Windows worker nodes with an auto-scaling node pool without bootstraping each node manually, and upgrade {{prodname}} deployments without manually upgrading nodes one at a time.
-
-For more information, see [Quickstart](../getting-started/kubernetes/windows-calico/quickstart#install-calico-for-windows-using-hostprocess-containers).
+<ReleaseNotes />
