Remove all docs for Anomaly Detection in Calico Enterprise

--- a/calico-enterprise/reference/architecture/overview.mdx
+++ b/calico-enterprise/reference/architecture/overview.mdx
@@ -19,7 +19,7 @@ The following diagram shows the components that comprise a Kubernetes on-premise
   imageBackgroundColor='white'
 />
 
-Calico open-source components are the foundation of {{prodname}}. {{prodname}} provides value-added components for visibility and troubleshooting, compliance, policy lifecycle management, threat and anomaly detection, and multi-cluster management.
+Calico open-source components are the foundation of {{prodname}}. {{prodname}} provides value-added components for visibility and troubleshooting, compliance, policy lifecycle management, threat detection, and multi-cluster management.
 
 ## {{prodname}} components
 
