--- a/calico-enterprise/reference/installation/_api.mdx
+++ b/calico-enterprise/reference/installation/_api.mdx
@@ -1455,22 +1455,6 @@ IntrusionDetectionSpec
 Only DeepPacketInspection is supported for this spec.</p>
 </td>
 </tr>
-<tr>
-<td>
-<code>anomalyDetection</code><br/>
-<em>
-<a href="#operator.tigera.io/v1.AnomalyDetectionSpec">
-AnomalyDetectionSpec
-</a>
-</em>
-</td>
-<td>
-<em>(Optional)</em>
-<p>AnomalyDetection provides configuration for running AnomalyDetection Component within
-IntrusionDetection. Anomaly Detection configuration will only be applied to standalone and
-management clusters.</p>
-</td>
-</tr>
 </table>
 </td>
 </tr>
@@ -2984,40 +2968,6 @@ Ready, Progressing, Degraded or other customer types.</p>
 </tr>
 </tbody>
 </table>
-<h3 id="operator.tigera.io/v1.AnomalyDetectionSpec">AnomalyDetectionSpec
-</h3>
-<p>
-(<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.IntrusionDetectionSpec">IntrusionDetectionSpec</a>)
-</p>
-<table>
-<thead>
-<tr>
-<th>Field</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>
-<code>storageClassName</code><br/>
-<em>
-string
-</em>
-</td>
-<td>
-<em>(Optional)</em>
-<p>StorageClassName will be used to query for an existing StorageClass with the same as the field value. It will also
-populate the PersistentVolumeClaim.StorageClassName that is used to provision disks for the Anomaly Detection API
-pod for model storage. If the field is left blank, Anomaly Detection API will be using EmptyDir VolumeSource.
-The StorageClassName should only be modified when no StorageClass is currently active. We recommend choosing a
-storage class dedicated to AnomalyDetection only. Otherwise, model retention cannot be guaranteed during upgrades.
-See <a href="https://docs.tigera.io/maintenance/upgrading">https://docs.tigera.io/maintenance/upgrading</a> for up-to-date instructions.
-This field is not used for managed clusters in a Multi-cluster management setup.</p>
-</td>
-</tr>
-</tbody>
-</table>
 <h3 id="operator.tigera.io/v1.ApplicationLayerPolicyStatusType">ApplicationLayerPolicyStatusType
 (<code>string</code> alias)</h3>
 <p>
@@ -3142,7 +3092,7 @@ Ready, Progressing, Degraded or other customer types.</p>
 </h3>
 <p>
 (<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.ManagerSpec">ManagerSpec</a>, 
+<a href="#operator.tigera.io/v1.ManagerSpec">ManagerSpec</a>,
 <a href="#operator.tigera.io/v1.ManagerStatus">ManagerStatus</a>)
 </p>
 <p>Auth defines authentication configuration.</p>
@@ -6359,7 +6309,7 @@ int32
 </h3>
 <p>
 (<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.Installation">Installation</a>, 
+<a href="#operator.tigera.io/v1.Installation">Installation</a>,
 <a href="#operator.tigera.io/v1.InstallationStatus">InstallationStatus</a>)
 </p>
 <p>InstallationSpec defines configuration for a Calico or Calico Enterprise installation.</p>
@@ -6948,22 +6898,6 @@ Kubernetes core/v1.ResourceRequirements
 Only DeepPacketInspection is supported for this spec.</p>
 </td>
 </tr>
-<tr>
-<td>
-<code>anomalyDetection</code><br/>
-<em>
-<a href="#operator.tigera.io/v1.AnomalyDetectionSpec">
-AnomalyDetectionSpec
-</a>
-</em>
-</td>
-<td>
-<em>(Optional)</em>
-<p>AnomalyDetection provides configuration for running AnomalyDetection Component within
-IntrusionDetection. Anomaly Detection configuration will only be applied to standalone and
-management clusters.</p>
-</td>
-</tr>
 </tbody>
 </table>
 <h3 id="operator.tigera.io/v1.IntrusionDetectionStatus">IntrusionDetectionStatus
@@ -7198,7 +7132,7 @@ Ready, Progressing, Degraded or other customer types.</p>
 (<code>string</code> alias)</h3>
 <p>
 (<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.CNILogging">CNILogging</a>, 
+<a href="#operator.tigera.io/v1.CNILogging">CNILogging</a>,
 <a href="#operator.tigera.io/v1.EgressGatewaySpec">EgressGatewaySpec</a>)
 </p>
 <h3 id="operator.tigera.io/v1.LogStorageComponentName">LogStorageComponentName
@@ -7697,17 +7631,17 @@ Ready, Progressing, Degraded or other customer types.</p>
 </h3>
 <p>
 (<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.APIServerDeployment">APIServerDeployment</a>, 
-<a href="#operator.tigera.io/v1.APIServerDeploymentPodTemplateSpec">APIServerDeploymentPodTemplateSpec</a>, 
-<a href="#operator.tigera.io/v1.CSINodeDriverDaemonSet">CSINodeDriverDaemonSet</a>, 
-<a href="#operator.tigera.io/v1.CSINodeDriverDaemonSetPodTemplateSpec">CSINodeDriverDaemonSetPodTemplateSpec</a>, 
-<a href="#operator.tigera.io/v1.CalicoKubeControllersDeployment">CalicoKubeControllersDeployment</a>, 
-<a href="#operator.tigera.io/v1.CalicoKubeControllersDeploymentPodTemplateSpec">CalicoKubeControllersDeploymentPodTemplateSpec</a>, 
-<a href="#operator.tigera.io/v1.CalicoNodeDaemonSet">CalicoNodeDaemonSet</a>, 
-<a href="#operator.tigera.io/v1.CalicoNodeDaemonSetPodTemplateSpec">CalicoNodeDaemonSetPodTemplateSpec</a>, 
-<a href="#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSet">CalicoWindowsUpgradeDaemonSet</a>, 
-<a href="#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSetPodTemplateSpec">CalicoWindowsUpgradeDaemonSetPodTemplateSpec</a>, 
-<a href="#operator.tigera.io/v1.TyphaDeployment">TyphaDeployment</a>, 
+<a href="#operator.tigera.io/v1.APIServerDeployment">APIServerDeployment</a>,
+<a href="#operator.tigera.io/v1.APIServerDeploymentPodTemplateSpec">APIServerDeploymentPodTemplateSpec</a>,
+<a href="#operator.tigera.io/v1.CSINodeDriverDaemonSet">CSINodeDriverDaemonSet</a>,
+<a href="#operator.tigera.io/v1.CSINodeDriverDaemonSetPodTemplateSpec">CSINodeDriverDaemonSetPodTemplateSpec</a>,
+<a href="#operator.tigera.io/v1.CalicoKubeControllersDeployment">CalicoKubeControllersDeployment</a>,
+<a href="#operator.tigera.io/v1.CalicoKubeControllersDeploymentPodTemplateSpec">CalicoKubeControllersDeploymentPodTemplateSpec</a>,
+<a href="#operator.tigera.io/v1.CalicoNodeDaemonSet">CalicoNodeDaemonSet</a>,
+<a href="#operator.tigera.io/v1.CalicoNodeDaemonSetPodTemplateSpec">CalicoNodeDaemonSetPodTemplateSpec</a>,
+<a href="#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSet">CalicoWindowsUpgradeDaemonSet</a>,
+<a href="#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSetPodTemplateSpec">CalicoWindowsUpgradeDaemonSetPodTemplateSpec</a>,
+<a href="#operator.tigera.io/v1.TyphaDeployment">TyphaDeployment</a>,
 <a href="#operator.tigera.io/v1.TyphaDeploymentPodTemplateSpec">TyphaDeploymentPodTemplateSpec</a>)
 </p>
 <p>Metadata contains the standard Kubernetes labels and annotations fields.</p>
@@ -8178,7 +8112,7 @@ string
 (<code>string</code> alias)</h3>
 <p>
 (<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.InstallationSpec">InstallationSpec</a>, 
+<a href="#operator.tigera.io/v1.InstallationSpec">InstallationSpec</a>,
 <a href="#operator.tigera.io/v1.InstallationStatus">InstallationStatus</a>)
 </p>
 <p>ProductVariant represents the variant of the product.</p>
@@ -8403,7 +8337,7 @@ Allowable values are Audit, DNS, Flows and IDSEvents.
 * Audit corresponds to audit logs for both Kubernetes resources and Enterprise custom resources.
 * DNS corresponds to DNS logs generated by Calico node.
 * Flows corresponds to flow logs generated by Calico node.
-* IDSEvents corresponds to event logs for the intrusion detection system (anomaly detection, suspicious IPs, suspicious domains and global alerts).</p>
+* IDSEvents corresponds to event logs for the intrusion detection system (suspicious IPs, suspicious domains and global alerts).</p>
 <h3 id="operator.tigera.io/v1.SyslogStoreSpec">SyslogStoreSpec
 </h3>
 <p>
