--- a/calico-enterprise/visibility/elastic/overview.mdx
+++ b/calico-enterprise/visibility/elastic/overview.mdx
@@ -27,15 +27,15 @@ Workloads and policies are highly dynamic. To troubleshoot Kubernetes clusters, 
 
 Elasticsearch logs provide the visibility and troubleshooting backend for {{prodname}}.
 
-| Log type | Description                                                                                                       | Log source                                  | RBAC         | Index                          |
-| -------- | ----------------------------------------------------------------------------------------------------------------- | ------------------------------------------- | ------------ | ------------------------------ |
-| flow     | Network flows for workloads: source and destination namespaces, pods, labels, and policies                        | {{prodname}} cnx-node (Felix)               | `flows`      | `tigera_secure_ee_flows.*`     |
-| audit    | Audit logs for {{prodname}} resources                                                                             | {{prodname}} apiserver                      | `audit_ee`   | `tigera_secure_ee_audit_ee.*`  |
-|          | Audit logs for Kubernetes resources                                                                               | Kubernetes apiserver                        | `audit_kube` | `tigera_secure_ee_audit_kube.*`|
-|          |                                                                                                                   | Both audit logs above                       | `audit*`     | `tigera_secure_ee_audit*`      |
-| bgp      | {{prodname}} networking BGP peering and route propagation                                                         | {{prodname}} cnx-node (BIRD)                | `ee_bgp`     | `tigera_secure_ee_bgp.*`       |
-| dns      | DNS lookups and responses from {{prodname}} domain-based policy                                                   | {{prodname}} cnx-node (Felix)               | `ee_dns`     | `tigera_secure_ee_dns.*`       |
-| ids      | {{prodname}} intrusion detection events: anomaly detection, suspicious IPs, suspicious domains, and global alerts | {{prodname}} intrusion-detection-controller | `ee_events`  | `tigera_secure_ee_events.*`    |
+| Log type | Description                                                                                    | Log source                                  | RBAC         | Index                          |
+| -------- | ---------------------------------------------------------------------------------------------- | ------------------------------------------- | ------------ | ------------------------------ |
+| flow     | Network flows for workloads: source and destination namespaces, pods, labels, and policies     | {{prodname}} cnx-node (Felix)               | `flows`      | `tigera_secure_ee_flows.*`     |
+| audit    | Audit logs for {{prodname}} resources                                                          | {{prodname}} apiserver                      | `audit_ee`   | `tigera_secure_ee_audit_ee.*`  |
+|          | Audit logs for Kubernetes resources                                                            | Kubernetes apiserver                        | `audit_kube` | `tigera_secure_ee_audit_kube.*`|
+|          |                                                                                                | Both audit logs above                       | `audit*`     | `tigera_secure_ee_audit*`      |
+| bgp      | {{prodname}} networking BGP peering and route propagation                                      | {{prodname}} cnx-node (BIRD)                | `ee_bgp`     | `tigera_secure_ee_bgp.*`       |
+| dns      | DNS lookups and responses from {{prodname}} domain-based policy                                | {{prodname}} cnx-node (Felix)               | `ee_dns`     | `tigera_secure_ee_dns.*`       |
+| ids      | {{prodname}} intrusion detection events: suspicious IPs, suspicious domains, and global alerts | {{prodname}} intrusion-detection-controller | `ee_events`  | `tigera_secure_ee_events.*`    |
 
 :::note
 
