--- a/calico/reference/felix/prometheus.mdx
+++ b/calico/reference/felix/prometheus.mdx
@@ -87,24 +87,24 @@ check that the optimizations are active for your policy set.
 #### `felix_label_index_num_endpoints`
 
 Reports the total number of endpoints (and similar objects such as network sets) being tracked by the index.
-This should match the number of endpoints and netowrk sets in your cluster.
+This should match the number of endpoints and network sets in your cluster.
 
 #### `felix_label_index_num_active_selectors{optimized="true|false"}`
 
 Reports the total number of active selectors, broken into `optimized="true"` and `optimized="false"` sub-totals.
 
 The `optimized="true"` total tracks the number of selectors that the label index was able to optimize.  Those
-selectors should be calculated efficiently even clusters with hundreds of thousands of endpoints.  In general the
+selectors should be calculated efficiently even in clusters with hundreds of thousands of endpoints.  In general the
 CPU used to calculate them should be proportional to the number of endpoints that match them and the churn rate of
 _those_ endpoints.
 
-The `optimized="false"` total tracks the number of selectors that could not be optimized.  Those selectors are
-much more costly to calculate and the CPU used to calculate them is proportional to the total number of endpoints
-in the cluster and the churn rate of all of those.  It is generally OK to have a handful of unoptimized selectors,
+The `optimized="false"` total tracks the number of selectors that could not be optimized.  Unoptimized selectors are
+much more costly to calculate; the CPU used to calculate them is proportional to the number of endpoints
+in the cluster and their churn rate.  It is generally OK to have a handful of unoptimized selectors,
 but if many selectors are unoptimized the CPU usage can be substantial at high scale.
 
-For more information on writing optimized selectors, see the [EntityRule section](../resources/networkpolicy.mdx#entityrule)
-of the NetworkPolicy reference.
+For more information on writing selectors that can be optimized, see the [this](../resources/networkpolicy.mdx#selector-performance-in-entityrules)
+section of the `NetworkPolicy` reference.
 
 #### `felix_label_index_selector_evals{result="true|false"}`
 
@@ -113,28 +113,29 @@ down by match (`true`) or no-match (`false`).  The ratio of match to no-match sh
 indexing optimizations are for your policy set.  The more effectively the label index can optimize the selectors,
 the fewer "no-match" results it will report relative to "match".
 
-If `felix_label_index_selector_evals{result="false"}` is many times `felix_label_index_selector_evals{result="true"}`
-then it is likely that some selectors in the policy set are not being optimized effectively.
+If you have more than a handful of active selctors and `felix_label_index_selector_evals{result="false"}` is many
+times `felix_label_index_selector_evals{result="true"}` then it is likely that some selectors in the policy set are
+not being optimized effectively.
 
 #### `felix_label_index_strategy_evals{strategy="..."}`
 
 This is a technical statistic that shows how many times the label index has employed each optimization
 strategy that it has available.  The strategies will likely evolve over time but, at time of writing, they are
 as follows (where endpoint means "endpoint or network set" and "parent" is Felix's internal term for resources such
-as Kubernetes Namespaces)
+as Kubernetes Namespaces).
 
-- `endpoint|parent-all`: the least efficient fall back strategy for unoptimized selectors. The index
+- `endpoint-all`: the least efficient fall back strategy for unoptimized selectors. The index
   scanned _all_ endpoints to find the matches for a selector.
 
 - `endpoint|parent-no-match`: the most efficient strategy; the index was able to prove that nothing matched the
   selector so it was able to skip the scan entirely.
 
 - `endpoint|parent-single-value`: the label index was able to limit the scan to only those endpoints/parents that
-  has a particular label and value combination.  For example, selector `label == "value"` would only scan items that
+  have a particular label and value combination.  For example, selector `label == "value"` would only scan items that
   had exactly that label set to "value".
 
 - `endpoint|parent-multi-value`: the label index was able to limit the scan to only those endpoints/parents that
-  has a particular label and one of a few values.  For example, selector `label in {"a", "b")` would only scan items
+  have a particular label and one of a few values.  For example, selector `label in {"a", "b")` would only scan items
   that had exactly that label with one of the given values.
 
 - `endpoint|parent-label-name`: the label index was able to limit the scan to only those endpoints/parents that
