--- a/calico/reference/felix/prometheus.mdx
+++ b/calico/reference/felix/prometheus.mdx
@@ -121,10 +121,9 @@ not being optimized effectively.
 
 This is a technical statistic that shows how many times the label index has employed each optimization
 strategy that it has available.  The strategies will likely evolve over time but, at time of writing, they are
-as follows (where endpoint means "endpoint or network set" and "parent" is Felix's internal term for resources such
-as Kubernetes Namespaces).
+as follows:
 
-- `endpoint-all`: the least efficient fall back strategy for unoptimized selectors. The index
+- `endpoint-full-scan`: the least efficient fall back strategy for unoptimized selectors. The index
   scanned _all_ endpoints to find the matches for a selector.
 
 - `endpoint|parent-no-match`: the most efficient strategy; the index was able to prove that nothing matched the
@@ -141,6 +140,10 @@ as Kubernetes Namespaces).
 - `endpoint|parent-label-name`: the label index was able to limit the scan to only those endpoints/parents that
   hava a particular label (but was unable to limit it to a particular subset of values).  For example, `has(label)`
   would result in that kind of scan.
+
+Terminology: here "endpoint" means "endpoint or NetworkSet" and "parent" is Felix's internal name for resources like
+Kubernetes Namespaces.  A "parent" scan means that the label index scanned all endpoints that have a parent
+matching the strategy.
 
 ### CPU / memory metrics
 
