--- a/calico-cloud/reference/component-resources/node/felix/prometheus.mdx
+++ b/calico-cloud/reference/component-resources/node/felix/prometheus.mdx
@@ -129,7 +129,7 @@ much more costly to calculate; the CPU used to calculate them is proportional to
 in the cluster and their churn rate.  It is generally OK to have a handful of unoptimized selectors,
 but if many selectors are unoptimized the CPU usage can be substantial at high scale.
 
-For more information on writing selectors that can be optimized, see the [this](../resources/networkpolicy.mdx#selector-performance-in-entityrules)
+For more information on writing selectors that can be optimized, see the [this](../../../resources/networkpolicy.mdx#selector-performance-in-entityrules)
 section of the `NetworkPolicy` reference.
 
 #### `felix_label_index_selector_evals{result="true|false"}`
