Update kubectl command to be more robust

--- a/calico/operations/operator-migration.mdx
+++ b/calico/operations/operator-migration.mdx
@@ -57,7 +57,7 @@ Do not edit or delete any resources in the `kube-system` Namespace during the fo
 1. Install the Tigera {{prodname}} operator and custom resource definitions.
 
    ```bash
-   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
+   kubectl apply --server-side --force-conflicts -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
    :::note
