--- a/calico-enterprise_versioned_docs/version-3.18/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/release-notes/index.mdx
@@ -48,15 +48,11 @@ We've added new options for Helm installs including: set the number of replicas 
 
 For more information, see [Helm installation reference](../reference/installation/helm_customization).
 
-<!-- We can break this up by component. H3 subheads or additions to titles -->
-
-<!-- Optional, as needed
-
-## Deprecated and removed features
+### Deprecated and removed features
 
 The following features are being deprecated or removed in this release:
 
--->
+The Anomaly detection feature is no longer supported and documentation is removed. Anomaly detection has been reworked and added to [Security event management](../threat/security-event-management).
 
 <!-- Optional, as needed
 ## Technology Preview features
