DOCS-1816-IA-Registry-Scanner-RN

--- a/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
@@ -10,6 +10,12 @@ description: What's new, and why features provide value for upgrading.
 
 <!-- Updates from CE 3.18 -->
 
+### Image Assurance registry scanner
+
+The Image Assurance feature adds the ability to scan images in container registries at any time, on any infrastructure, including Kubernetes. This is ideal protection for images that don’t go through a pipeline (for example, third-party images), but are published to a registry. If CVEs are missed in your build pipeline, you can catch them before they are deployed.
+
+For more information, see [Scan images in container registries](../image-assurance/scanners/registry-scanner).
+
 ### Security event management
 
 We've added a new Security event management dashboard for threat detection.
@@ -36,6 +42,12 @@ We've added a new default mode for WAF that is monitor/event only.
 This allows operators and security teams to verify the accuracy of configured rules before actively blocking traffic.
 
 For more information, see [Web application firewall](../threat/web-application-firewall).
+
+### Deprecated and removed features
+
+The following features are being deprecated or removed in this release:
+
+The Anomaly detection feature is no longer supported and documentation is removed. Anomaly detection has been reworked and added to [Security event management](../threat/security-event-management).
 
 <!-- CC 18 updates -->
 ### Enhancements
