--- a/calico-cloud_versioned_docs/version-18/tutorials/calico-cloud-features/service-graph.mdx
+++ b/calico-cloud_versioned_docs/version-18/tutorials/calico-cloud-features/service-graph.mdx
@@ -4,6 +4,8 @@ description: Learn the basics of using Service Graph.
 
 # Service Graph tutorial
 
+import ReactPlayer from 'react-player';
+
 :::note
 
 This tutorial references the labs cluster setup that is part of the {{prodname}} Trial environment.
@@ -19,6 +21,21 @@ This tutorial references the labs cluster setup that is part of the {{prodname}}
 ## The what and why of Service Graph
 
 One thing we consistently hear from DevOps engineers, SREs, and platform operators is that they struggle with getting basic visibility within their Kubernetes cluster. As more apps and microservices are deployed, and workloads are changing continuously, it becomes hard to understand how everything is working together in such a complex multi-tenant environment. Service Graph provides a "weather map" view of everything in a cluster, helping new team members ramp up quickly on how everything is communicating with each other, and an easy way to engage the right stakeholders when issues come up. Service Graph delivers a point-to-point, topographical view of how namespaces, services, and deployments are communicating with each other.
+
+## Quick demo
+
+**2-minute video**
+
+<ReactPlayer
+  className='wistia_embed wistia_async_46g9yglrpt'
+  url='https://fast.wistia.com/embed/medias/46g9yglrpt'
+  controls
+  config={{
+    wistia: {
+      videoFoam: true,
+    },
+  }}
+/>
 
 ## Exploring Service Graph with the labs cluster
 
