Back changes port to OSS 3.24, 3.25, 3.26

--- a/calico_versioned_docs/version-3.24/operations/operator-migration.mdx
+++ b/calico_versioned_docs/version-3.24/operations/operator-migration.mdx
@@ -57,7 +57,7 @@ Do not edit or delete any resources in the `kube-system` Namespace during the fo
 1. Install the Tigera {{prodname}} operator and custom resource definitions.
 
    ```
-   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
+   kubectl apply --server-side --force-conflicts -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
 1. Trigger the operator to start a migration by creating an `Installation` resource. The operator will auto-detect your existing {{prodname}} settings and fill out the spec section.
