Revert "remove media from url"
This reverts commit 3db5f60a544f843919e5c5b6906ab638a2a2150a.

--- a/calico-enterprise_versioned_docs/version-3.16/about-calico-enterprise.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/about-calico-enterprise.mdx
@@ -56,13 +56,13 @@ Learn about the {{prodname}} features that remove these blockers.
 
 ## Egress access controls
 
-{{prodname}}  ---Testing changes---  packages several features that enable fine-grained access controls between your microservices and databases, cloud services, APIs, and other applications that are protected behind a firewall.
+{{prodname}} packages several features that enable fine-grained access controls between your microservices and databases, cloud services, APIs, and other applications that are protected behind a firewall.
 
 **2-minute video**
 
 <ReactPlayer
   className='wistia_embed wistia_async_v60ur89tn9'
-  url='https://fast.wistia.com/embed/v60ur89tn9'
+  url='https://fast.wistia.com/embed/medias/v60ur89tn9'
   controls
   config={{
     wistia: {
